%% Helix Thready — Core relational data model (architecture-level ERD)
%% Source of truth: helix_thready_research_request_final.md §19.12
erDiagram
  ACCOUNTS ||--o{ MEMBERSHIPS : has
  USERS ||--o{ MEMBERSHIPS : in
  ACCOUNTS ||--o{ CHANNELS : monitors
  CHANNELS ||--o{ POSTS : contains
  POSTS ||--o{ REPLIES : "root + organic chain"
  POSTS ||--o{ POST_HASHTAGS : tagged
  POSTS ||--|| POST_PROCESSING_STATE : "single-claim"
  POSTS ||--o{ ASSET_LINKS : references
  ASSETS ||--o{ ASSET_LINKS : linked
  POSTS ||--o{ SEMANTIC_CHUNKS : embedded
  ASSETS ||--o{ SEMANTIC_CHUNKS : embedded
  RESEARCH_DOCS ||--o{ SEMANTIC_CHUNKS : embedded
  ACCOUNTS ||--o{ SUBSCRIPTIONS : billed
  SUBSCRIPTIONS ||--o{ USAGE_METERING : meters
  ACCOUNTS ||--o{ AUDIT_LOG : records
